2008-09-15 Lionel Sainte Cluque
  * src/Makefile.am: Add $(DESTDIR) in tclspice installation, required by debian package.
  * src/Makefile.am: Use -no-undefined only for windows build (libspice_la_LDFLAGS)

2008-09-13 Holger Vogt
 * configure.in: add AC_LIBTOOL_WIN32_DLL
 * src/makefile.am correct typo

2008-09-13 Holger Vogt
 * configure.in: add /mingw as search path for tcl
 * tclspice.c: replace sigsetjump and sigjmp_buf with macros from macros.h
 
2008-09-09 Lionel Sainte Cluque
 * configure.in: tclspice checks moved before Operating System checks: To set
 no_x flag before it is used.
 * tests/tcl-testbench*: chmod a+x tcl-testbench*.tcl

2008-09-01
 * configure.in: CAPZEROBYPASS is enabled by default now. To disable it you
   can add --disable-capzerobypass to configure command.  

2008-08-27 Paolo Nenzi
 * --- TCLSPICE initial integration (Lionel Sainte Cluque) ---
 * Makefile.am: Makefiles changed for libtool. We use still .a files but we let
   libtool to create them in a portable manner. This slows compilation a little
   bit but improves portability of ngspice/tclspice.
 * src/tclspice.c, src/tclspice.map, pkgIndex.tcl.in, src/include/tclspice.h: 
   tclspice main and include file. (Readded files).
 * src/tests/tcl/, src/tests/tcl-testbench1/, src/tests/tcl-testbench2/, 
   src/tests/tcl-testbench3/, src/tests/tcl-testbench4/: testbenches for 
   the tclspice simulator. (New dirs).
 * src/frontend/plotit.c: added blt_plot for blt output device if TCL defined.
 * src/frontend/com_plot.c, src/frontend/com_plot.h: added com_bltplot.
 * src/frontend/commands.c: redefined plot command to combltplot if TCL is enabled.
 * src/frontend/display.c: defined Tk display device.
 * src/frontend/outitf.c: added blt support.
 * src/frontend/terminal.c: if TCL is defined, interactive terminal stubs are copiled in.
 * src/include/ngspice.h: added definitions for TCL functions.
 * src/misc/alloc.c: Using TCL allocation functions when tclspice is enabled.