@@ -17,6 +17,10 @@ Modified 1999 Emmanuel Rouat
 #include "hlpdefs.h"
 #include "suffix.h"
 
+#if defined (_MSC_VER)
+#define strncasecmp _strnicmp
+#endif
+
 static char *getsubject(fplace *place);
 static toplink *getsubtoplink(char **ss);
 
