@@ -23,7 +23,12 @@ $Id$
 #include "resource.h"
 #include "variable.h"
 #include "cktdefs.h"
+
+#ifdef _MSC_VER
+#include "../misc/misc_time.h" /* timediff */
+#else
 #include "src/misc/misc_time.h" /* timediff */
+#endif
 
 #ifdef XSPICE
 /* gtri - add - 12/12/90 - wbk - include ipc stuff */
