@@ -74,7 +74,7 @@
 /* Alternate initialisation file name */
 #define ALT_INITSTR	"spice.rc"	
 
-#ifdef __MINGW32__
+#if defined(__MINGW32__) || defined(_MSC_VER)
 #define DIR_PATHSEP	"\\"
 #define DIR_TERM	'\\'
 #define DIR_CWD		"."
