@@ -1,3 +1,8 @@
+2008-09-22 Holger Vogt
+ * complex.h, measure.c, resource.c, windisp.c, xpressn.c, rawfile.c, runcoms.c, readhelp.c,
+   defines.h, ngspice.h, b4soild.c, hsm1eval102.c, hsm1eval112.c, hsm1eval120.c, wstdio.h
+   Small changes to allow compilation with MS Visual C++ 2008
+
 2008-09-15 Lionel Sainte Cluque
   * src/Makefile.am: Add $(DESTDIR) in tclspice installation, required by debian package.
   * src/Makefile.am: Use -no-undefined only for windows build (libspice_la_LDFLAGS)
